
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-pl ($LastChangedRevision$, $LastChangedDate$)
====================================
- Fixed setup directory checks for advanced builds
- Fixed incorrect welcome URL in build
- [#MODX-2008] Added in Czech translation
- Configured phpdoc.ini file for SDK build
- Fixed bug in file tree where URL was absolute rather than relative when being drag/dropped
- Added OnFileEditFormPrerender event to allow plugins to fire on file editing form
- [#MODX-2172] Fixed bug where tooltips for stay buttons were behind window
- Sanity checks to tv render directories
- Removed deprecated CSS icon reference
- [#MODX-2169] Fixed bug with TV default values, inheriting and non-linear TV inputs
- [#MODX-2170] Fixed error where element names cannot have less than 3 characters
- [#MODX-2169] Properly handled @INHERIT binding in TV inputs
- [#MODX-2165] Changed 'Remove Package Version' context menu item behavior to allow to show on non-installed versions to allow rollbacks from downloaded but not installed updates
- [#MODX-2164] Fixed issue that might cause random, non-affecting error during package updates
- [#MODX-2008] Added in Japanese translation
- [#MODX-2163] Default settings grid to show only core namespace settings to reduce confusion
- Added autotag TV input widget that grabs tags from a list of the tags so far for all content values for that TV
- [#MODX-2161] Added sanity check for incorrect or invalid filemanager_path values in file tree
- Added missing deleted checkbox on resource panels
- [#MODX-2167] Fixed issue where duplicate button was creating incorrect duplicate name
- [#MODX-2162] Fixed issues with set to default in TV values, reliance on processedValue
- [#MODX-2168] Fixed new user panel issue with missing JS reference