@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-pl ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- [#MODX-2173] Fixed issue with IE and package installation wizard
 - Fixed setup directory checks for advanced builds
 - Fixed incorrect welcome URL in build
 - [#MODX-2008] Added in Czech translation
